--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
+    "dom": "^0.0.3",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-router": "^7.8.1",
+    "react-router": "^7.8.2",
+    "react-router-dom": "^7.8.2",
     "react-select": "^5.10.2",
     "tailwindcss": "^4.1.11",
     "yup": "^1.7.0"
